# stunts

./: .gitignore  Cargo.toml  README.md
src/: editor_state.rs  main.rs
src/helpers/: animations.rs  mod.rs  projects.rs  saved_state.rs  utilities.rs
src/shaders/: frag_primary.wgsl  vert_primary.wgsl
src/views/: app.rs  aside.rs  assets_panel.rs  color_pallete.rs  editor_settings.rs  export.rs  images_panel.rs  inputs.rs  keyframe_panel.rs  keyframe_timeline.rs  mod.rs  object_timeline.rs  project_browser.rs  properties_panel.rs  scene.rs  sequence_panel.rs  sequence_timeline.rs  sequences_panel.rs  settings_panel.rs  upload_field.rs
wix/: License.rtf  main.wxs
