[package]
name = "stunts"
version = "1.0.0"
edition = "2021"
authors = ["Alex Woodman <alexthegoodman@gmail.com>"]
description = "Stunts is a video and motion graphics editor centered around UX and AI"
license = "MIT"
repository = "https://github.com/alexthegoodman/stunts"
keywords = ["video", "motion"]
readme = "README.md"

[dependencies]
bytemuck = "1.19.0"
wgpu = "22.1.0"
floem = { path = "D:/projects/common/common-floem", features = ["tokio"] }
floem_renderer = { path = "D:/projects/common/common-floem/renderer", version = "0.1.0" }
crossbeam = "0.8.4"
stunts-engine = { path = "D:/projects/common/stunts-engine" }
floem-winit = { git = "https://github.com/lapce/winit", rev = "c8d3b8fd6fa4ffd5e0f99be78aacddcf6de57bcd", features = ["rwh_05"] }
im = "15.1.0"
once_cell = "1.20.2"
uuid = { version = "1.8.0", features = ["v4"] }
strum = "0.26.3"
strum_macros = "0.26"
cgmath = "0.18.0"
undo = "0.51.0"
tokio = { version = "1.39.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.11.0"
directories = "5.0.1"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
rfd = "0.15.2"
reqwest = { version = "0.12.12", features = ["json"] }
palette = "0.7.6"